Let some example bundles be used with Java 8